--- a/src/style.css
+++ b/src/style.css
@@ -1,30 +1,65 @@
-.nav-container {
-    height: 5vh;
-    width: 100vw;
+*{
+    margin: 0;
+    border: red solid 1px;
+}
+
+.navbar-container{
+    display: flex;
+    margin-top: 0;
+    margin-left: 0;
     position: sticky;
-    top: 0;
-    z-index: 100;
+    width: 100vw;
+    height: 10vh;
+}
+
+.logo-container{
+    width: 10%;
+    height: 100%;
     display: flex;
-    justify-content: space-between;
-    background-color: black;
-    color: white;
+    margin: auto;
+    background-color: pink;
 }
 
-.headline {
-    width: 50vw;
-    margin-left: 10px;
-}
-
-#logo {
-    color: #ffffff;
-    margin-bottom: 2px;
-}
-
-.navbar {
+.search-container{
+    width: 90%;
+    height: 100%;
     display: flex;
-    justify-content: flex-end;
-    margin-top: 5px;
-    margin-right: 10px;
-    width: 50vw;
+    flex-direction: column;
+    margin: auto;
+    background-color: rgb(207, 16, 48);
+}
 
+.search-bar{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 50%;
+    background-color: rgb(16, 162, 207);
+}
+
+#search-button{
+    background-color: transparent;
+    width: 5%;
+    height: 100%;
+    border: none;
+    
+}
+#search-icon{
+    margin: 0;
+    height: 80%;
+    width: 80%;
+}
+
+#user-input{
+    width: 80%;
+    height: 50%;
+    border-radius: 15px;
+
+}
+
+.options{
+    width: 100%;
+    height: 50%;
+    background-color: rgb(19, 16, 207);
 }
