--- a/src/style.css
+++ b/src/style.css
@@ -58,6 +58,12 @@
     margin: 0;
     height: 50%;
     width: 50%;
+    transition: 0.5s;
+}
+
+#search-icon:hover{
+    transform: scale(1.2);
+        cursor: pointer;
 }
 
 #user-input{
