--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,9 @@
     position: sticky;
     width: 100vw;
     height: 10vh;
+    -webkit-box-shadow: 0px 3px 5px 0px rgba(255,136,0,0.69);
+-moz-box-shadow: 0px 3px 5px 0px rgba(255,136,0,0.69);
+box-shadow: 0px 3px 5px 0px rgba(255,136,0,0.69);
 }
 
 .logo-container{
@@ -40,11 +43,12 @@
 
 .search-bar{
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     width: 100%;
     height: 50%;
     background-color: var(--primary-color);
+color: white;
 }
 
 #search-button{
@@ -72,6 +76,7 @@
     border: none;
     border-radius: 15px;
     background-color: var(--navsearch-color);
+    padding-left: 1%;
 }
 
 .options{
