--- a/src/style.css
+++ b/src/style.css
@@ -48,7 +48,7 @@ box-shadow: 0px 3px 5px 0px rgba(255,136,0,0.69);
     width: 100%;
     height: 50%;
     background-color: var(--primary-color);
-color: white;
+    color: white;
 }
 
 #search-button{
@@ -89,25 +89,25 @@ color: white;
 .placeholder1{
     width: 25%;
     height: 100%;
-    border: black solid 1px;
+    /* border: black solid 1px; */
 }
 
 .placeholder2{
     width: 25%;
     height: 100%;
-    border: black solid 1px;
+    /* border: black solid 1px; */
 }
 
 .placeholder3{
     width: 25%;
     height: 100%;
-    border: black solid 1px;
+    /* border: black solid 1px; */
 }
 
 .placeholder4{
     width: 25%;
     height: 100%;
-    border: black solid 1px;
+    /* border: black solid 1px; */
 }
 
 
