--- a/src/details.css
+++ b/src/details.css
@@ -1,6 +1,5 @@
 *{
     margin: 0;
-    /* border: red solid 1px; */
 }
 
 :root{
@@ -12,126 +11,87 @@
 /* opacity: 46%; */
 }
 
-.navbar-container{
+/* Navbar styles */
+.navbar-container {
     display: flex;
-    margin-top: 0;
-    margin-left: 0;
-    position: sticky;
-    width: 100vw;
-    height: 10vh;
-    -webkit-box-shadow: 0px 3px 5px 0px rgba(15, 91, 172, 0.69);
--moz-box-shadow: 0px 3px 5px 0px rgba(15, 91, 172, 0.69);
-box-shadow: 0px 3px 5px 0px rgba(15, 91, 172, 0.69);
-}
-
-.logo-container {
-    width: 15%;
-    height: 100%;
-    display: flex;
-    margin: auto;
-    background-color: var(--primary-color);
-}
-
-#logo-picture {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-    max-width: 100%;
-    max-height: 100%;
-    transform: scale(5);
-    margin-top: 50%;
-}
-
-.search-container{
-    width: 85%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    margin: auto;
-    background-color: var(--primary-color);
-}
-
-.search-bar{
-    display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
-    width: 100%;
-    height: 50%;
-    background-color: var(--primary-color);
-color: white;
+    background-color: #f8f9fa;
+    padding: 8px 64px;
+    gap: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-#search-button{
-    background-color: transparent;
-    width: 5%;
-    height: 100%;
-    border: none;
-    
-}
-#search-icon{
-    margin: 0;
-    height: 50%;
-    width: 50%;
-    transition: 0.5s;
-}
-
-#search-icon:hover{
-    transform: scale(1.2);
-        cursor: pointer;
-}
-
-#user-input{
-    width: 80%;
-    height: 50%;
-    border: none;
-    border-radius: 15px;
-    background-color: var(--navsearch-color);
-    padding-left: 1%;
-    color: white;
-}
-
-.options{
+.navbar-left {
     display: flex;
-    width: 100%;
-    height: 50%;
-    background-color:  var(--primary-color);
-}
-
-.placeholder1{
-    width: 25%;
-    height: 100%;
-    border: black solid 1px;
-}
-
-.placeholder2{
-    width: 25%;
-    height: 100%;
-    border: black solid 1px;
-}
-
-.placeholder3{
-    width: 25%;
-    height: 100%;
-    border: black solid 1px;
-}
-
-.placeholder4{
-    width: 25%;
-    height: 100%;
-    border: black solid 1px;
-}
-
-
-.logo-container{
-    display: flex;
+    flex: 0.2;
     justify-content: center;
+}
+.navbar-left .logo {
+    display: flex;
     align-items: center;
 }
 
-#logo-picture{
-    height: 100%;
-    width: 80%;
+#logo-img {
+    position: relative;
+    width: 35px;
+    height: 35px;
+    top: 15%;
 }
+
+.navbar-left span {
+    font-size: 20pt;
+    font-weight: bold;
+}
+
+.navbar-center {
+    display: flex;
+    flex: 0.7;
+    justify-content: center;
+    gap: 16px;
+}
+
+
+#user-input {
+    width: 100%;
+    padding: 0.5rem;
+    border: 1px solid #AAA;
+    border-radius: 0.5rem;
+    text-indent: 2rem;
+    font-size: 14pt;
+    color: black;
+}
+
+.navbar-right {
+    display: flex;
+    flex: 0.1;
+}
+
+.filter-btn {
+    display: flex;
+    align-items: center;
+    padding: 8px 16px;
+    font-size: 14pt;
+    border: none;
+    background-color: #007bff;
+    color: white;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.filter-btn:hover {
+    background-color: #0056b3;
+}
+
+.profile-icon {
+    position: absolute;
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    border-color: #000;
+    cursor: pointer;
+}
+
 
 .ship-content{
     display: flex;
@@ -230,5 +190,4 @@ border-radius: 1%;
     width: 94%;
     display: flex;
     justify-content: space-around;
-padding: ;
 }
