--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,5 @@
 *{
     margin: 0;
-    /* border: red solid 1px; */
 }
 
 :root{
@@ -17,11 +16,11 @@
     margin-top: 0;
     margin-left: 0;
     position: sticky;
-    width: 100vw;
+    width: 100%;
     height: 10vh;
     -webkit-box-shadow: 0px 3px 5px 0px rgba(255,136,0,0.69);
--moz-box-shadow: 0px 3px 5px 0px rgba(255,136,0,0.69);
-box-shadow: 0px 3px 5px 0px rgba(255,136,0,0.69);
+    -moz-box-shadow: 0px 3px 5px 0px rgba(255,136,0,0.69);
+    box-shadow: 0px 3px 5px 0px rgba(255,136,0,0.69);
 }
 
 .logo-container{
