--- a/src/details.css
+++ b/src/details.css
@@ -1,249 +1,181 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-* {
+*{
     margin: 0;
-    font-family: "Roboto";
-    /* border: red solid 1px; */
-
 }
 
-:root {
-
-    --primary-color: hsl(210, 20%, 20%);
-    --background-color: hsl(169, 55%, 86%);
-    --navsearch-color: hsl(210, 20%, 14%);
-    --shadow-color: hsl(32, 100%, 50%);
-    /* opacity: 46%; */
+:root{
+    
+--primary-color: hsl(210, 20%, 20%);
+--background-color: hsl(169, 55%, 86%);
+--navsearch-color: hsl(210, 20%, 14%);
+--shadow-color: hsl(32, 100%, 50%); 
+/* opacity: 46%; */
 }
 
+/* Navbar styles */
 .navbar-container {
     display: flex;
-    margin-top: 0;
-    margin-left: 0;
-    position: sticky;
-    width: 100vw;
-    height: 10vh;
-    -webkit-box-shadow: 0px 3px 5px 0px rgba(15, 91, 172, 0.69);
-    -moz-box-shadow: 0px 3px 5px 0px rgba(15, 91, 172, 0.69);
-    box-shadow: 0px 3px 5px 0px rgba(15, 91, 172, 0.69);
-}
-
-.logo-container {
-    width: 15%;
-    height: 100%;
-    display: flex;
-    margin: auto;
-    background-color: var(--primary-color);
-}
-
-#logo-picture {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-    max-width: 100%;
-    max-height: 100%;
-
-    /* margin-top: 50%; */
-}
-
-.search-container {
-    width: 85%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    margin: auto;
-    background-color: var(--primary-color);
-}
-
-.search-bar {
-    display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
+    background-color: #f8f9fa;
+    padding: 8px 64px;
+    gap: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.navbar-left {
+    display: flex;
+    flex: 0.2;
+    justify-content: center;
+}
+.navbar-left .logo {
+    display: flex;
+    align-items: center;
+}
+
+#logo-img {
+    position: relative;
+    width: 35px;
+    height: 35px;
+    top: 15%;
+}
+
+.navbar-left span {
+    font-size: 20pt;
+    font-weight: bold;
+}
+
+.navbar-center {
+    display: flex;
+    flex: 0.7;
+    justify-content: center;
+    gap: 16px;
+}
+
+
+#user-input {
     width: 100%;
-    height: 50%;
-    background-color: var(--primary-color);
-    color: white;
+    padding: 0.5rem;
+    border: 1px solid #AAA;
+    border-radius: 0.5rem;
+    text-indent: 2rem;
+    font-size: 14pt;
+    color: black;
 }
 
-#search-button {
-    background-color: transparent;
-    width: 5%;
-    height: 100%;
+.navbar-right {
+    display: flex;
+    flex: 0.1;
+}
+
+.filter-btn {
+    display: flex;
+    align-items: center;
+    padding: 8px 16px;
+    font-size: 14pt;
     border: none;
-
-}
-
-#search-icon {
-    margin: 0;
-    height: 50%;
-    width: 50%;
-    transition: 0.5s;
-}
-
-#search-icon:hover {
-    transform: scale(1.2);
+    background-color: #007bff;
+    color: white;
+    border-radius: 4px;
     cursor: pointer;
 }
 
-#user-input {
-    width: 80%;
-    height: 50%;
-    border: none;
-    border-radius: 15px;
-    background-color: var(--navsearch-color);
-    padding-left: 1%;
-    color: white;
+.filter-btn:hover {
+    background-color: #0056b3;
 }
 
-.options {
-    display: flex;
-    width: 100%;
-    height: 50%;
-    background-color: var(--primary-color);
-}
-
-.placeholder1 {
-    width: 25%;
-    height: 100%;
-    border: black solid 1px;
-}
-
-.placeholder2 {
-    width: 25%;
-    height: 100%;
-    border: black solid 1px;
-}
-
-.placeholder3 {
-    width: 25%;
-    height: 100%;
-    border: black solid 1px;
-}
-
-.placeholder4 {
-    width: 25%;
-    height: 100%;
-    border: black solid 1px;
+.profile-icon {
+    position: absolute;
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    border-color: #000;
+    cursor: pointer;
 }
 
 
-.logo-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#logo-picture {
-    height: 100%;
-    width: 80%;
-}
-
-.ship-content {
+.ship-content{
     display: flex;
     width: 100vw;
     height: 80vh;
-    background-color: lightgray;
-    justify-content: space-around;
+background-color: lightgray;
+justify-content: space-around;
 
 }
 
-.result-container {
+.result-container{
     display: flex;
-    margin-top: 5vh;
-    margin-left: 3vw;
-    background-color: rgb(236, 236, 236);
-    width: 20vw;
-    height: 72vh;
-    -webkit-box-shadow: -1px 1px 5px 3px rgba(0, 0, 0, 0.24);
-    -moz-box-shadow: -1px 1px 5px 3px rgba(0, 0, 0, 0.24);
-    box-shadow: -1px 1px 5px 3px rgba(0, 0, 0, 0.24);
-    border-radius: 1%;
+margin-top: 5vh;
+margin-left: 3vw;
+background-color: rgb(236, 236, 236);
+width: 20vw;
+height: 72vh;
+-webkit-box-shadow: -1px 1px 5px 3px rgba(0,0,0,0.24);
+-moz-box-shadow: -1px 1px 5px 3px rgba(0,0,0,0.24);
+box-shadow: -1px 1px 5px 3px rgba(0,0,0,0.24);
+border-radius: 1%;
 }
 
-.dashboard-container {
+.dashboard-container{
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    background-color: rgb(236, 236, 236);
-    margin-top: 5vh;
-    margin-right: 3vw;
-    width: 70vw;
-    height: 72vh;
-    overflow: hidden;
-    justify-content: space-around;
-    align-items: center;
-    -webkit-box-shadow: -1px 1px 5px 3px rgba(0, 0, 0, 0.24);
-    -moz-box-shadow: -1px 1px 5px 3px rgba(0, 0, 0, 0.24);
-    box-shadow: -1px 1px 5px 3px rgba(0, 0, 0, 0.24);
-    border-radius: 1%;
+background-color: rgb(236, 236, 236);
+margin-top: 5vh;
+margin-right: 3vw;
+width: 70vw;
+height: 72vh;
+overflow: hidden;
+justify-content: space-around;
+align-items: center;
+-webkit-box-shadow: -1px 1px 5px 3px rgba(0,0,0,0.24);
+-moz-box-shadow: -1px 1px 5px 3px rgba(0,0,0,0.24);
+box-shadow: -1px 1px 5px 3px rgba(0,0,0,0.24);
+border-radius: 1%;
 }
 
-.vessel-name {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-direction: column;
+.vessel-name{
+width: 17vw;
+height: 7vh;
+border-radius: 4%;
+background-color: rgb(211, 213, 218);
+-webkit-box-shadow: -1px 1px 5px 3px rgba(0,0,0,0.28);
+-moz-box-shadow: -1px 1px 5px 3px rgba(0,0,0,0.28);
+box-shadow: -1px 1px 5px 3px rgba(0,0,0,0.28);
 
-    width: 15vw;
+}
+
+.current-location{
+    width: 17vw;
     height: 7vh;
     border-radius: 4%;
-    background-color: rgb(211, 213, 218);
-    -webkit-box-shadow: -1px 1px 5px 3px rgba(0, 0, 0, 0.28);
-    -moz-box-shadow: -1px 1px 5px 3px rgba(0, 0, 0, 0.28);
-    box-shadow: -1px 1px 5px 3px rgba(0, 0, 0, 0.28);
-
+    background-color:  rgb(211, 213, 218);
+    -webkit-box-shadow: -1px 1px 5px 3px rgba(0,0,0,0.28);
+-moz-box-shadow: -1px 1px 5px 3px rgba(0,0,0,0.28);
+box-shadow: -1px 1px 5px 3px rgba(0,0,0,0.28);
 }
 
-.current-location {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-direction: column;
-    width: 15vw;
+.knots{
+    width: 17vw;
     height: 7vh;
     border-radius: 4%;
-    background-color: rgb(211, 213, 218);
-    -webkit-box-shadow: -1px 1px 5px 3px rgba(0, 0, 0, 0.28);
-    -moz-box-shadow: -1px 1px 5px 3px rgba(0, 0, 0, 0.28);
-    box-shadow: -1px 1px 5px 3px rgba(0, 0, 0, 0.28);
+    background-color:  rgb(211, 213, 218);
+    -webkit-box-shadow: -1px 1px 5px 3px rgba(0,0,0,0.28);
+-moz-box-shadow: -1px 1px 5px 3px rgba(0,0,0,0.28);
+box-shadow: -1px 1px 5px 3px rgba(0,0,0,0.28);
 }
 
-.captain-Name {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-direction: column;
-    width: 15vw;
-    height: 7vh;
-    border-radius: 4%;
-    background-color: rgb(211, 213, 218);
-    -webkit-box-shadow: -1px 1px 5px 3px rgba(0, 0, 0, 0.28);
-    -moz-box-shadow: -1px 1px 5px 3px rgba(0, 0, 0, 0.28);
-    box-shadow: -1px 1px 5px 3px rgba(0, 0, 0, 0.28);
-}
-
-.purpose-container {
-    width: 15vw;
-    height: 7vh;
-    border-radius: 4%;
-    background-color: rgb(211, 213, 218);
-    -webkit-box-shadow: -1px 1px 5px 3px rgba(0, 0, 0, 0.28);
-    -moz-box-shadow: -1px 1px 5px 3px rgba(0, 0, 0, 0.28);
-    box-shadow: -1px 1px 5px 3px rgba(0, 0, 0, 0.28);
-}
-
-.map-container {
+.map-container{
     background-color: rgb(189, 198, 208);
-    border-radius: 1%;
+border-radius: 1%;
     width: 64vw;
     height: 40vh;
-    -webkit-box-shadow: -1px 1px 5px 3px rgba(0, 0, 0, 0.28);
-    -moz-box-shadow: -1px 1px 5px 3px rgba(0, 0, 0, 0.28);
-    box-shadow: -1px 1px 5px 3px rgba(0, 0, 0, 0.28);
+    -webkit-box-shadow: -1px 1px 5px 3px rgba(0,0,0,0.28);
+    -moz-box-shadow: -1px 1px 5px 3px rgba(0,0,0,0.28);
+    box-shadow: -1px 1px 5px 3px rgba(0,0,0,0.28);
 }
 
-.footer-container {
+.footer-container{
     display: flex;
     align-items: baseline;
     background-color: var(--primary-color);
@@ -254,11 +186,10 @@
     box-shadow: 0px -3px 5px 0px rgba(15, 91, 172, 0.69);
 }
 
-.written-details {
+.written-details{
     width: 94%;
     display: flex;
     justify-content: space-around;
-    /* padding: ; */
 }
 
 .details-header{
