--- a/src/details.css
+++ b/src/details.css
@@ -6,7 +6,11 @@
 }
 
 :root{
-    
+
+--slate: #9ca6b8;
+--blue-grotto: #163b50;
+--dark-blue: #05263b;
+--misty-blue: #aeb8c4;
 --primary-color: hsl(210, 20%, 20%);
 --background-color: hsl(169, 55%, 86%);
 --navsearch-color: hsl(210, 20%, 14%);
@@ -19,7 +23,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #f8f9fa;
+    background-color: #fff;
     padding: 8px 64px;
     gap: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -45,24 +49,30 @@
 .navbar-left span {
     font-size: 20pt;
     font-weight: bold;
+    color: var(--dark-blue)
 }
 
 .navbar-center {
     display: flex;
-     flex: 0.7;
+    flex: 0.7;
     justify-content: center;
     gap: 16px;
 }
-
 
 #user-input {
     width: 100%;
     padding: 0.5rem;
     border: 1px solid #AAA;
     border-radius: 0.5rem;
-    text-indent: 2rem;
+    text-indent: 1rem;
     font-size: 14pt;
-    color: black;
+    color: var(--dark-blue);
+    transition: border 0.5s ease;
+}
+
+#user-input:focus{
+    border: 1px solid var(--dark-blue);
+    outline: none;
 }
 
 .navbar-right {
@@ -76,14 +86,38 @@
     padding: 8px 16px;
     font-size: 14pt;
     border: none;
-    background-color: #007bff;
+    background-color: var(--blue-grotto);
     color: white;
     border-radius: 4px;
     cursor: pointer;
 }
 
+#filter-by-id {
+    list-style: none;
+    visibility: hidden;
+    opacity: 0;
+    transition: all 0.5s ease;
+    display: none;
+}
+
 .filter-btn:hover {
     background-color: #0056b3;
+}
+
+.filter-btn:hover #filter-by-id {
+    visibility: visible;
+    opacity: 1;
+    display: block;
+}
+
+.filter-options {
+    padding: 1px;
+    background-color: white;
+    cursor: pointer;
+}
+
+.filter-options:hover {
+    background-color: #f0f0f0;
 }
 
 .profile-icon {
@@ -98,86 +132,118 @@
 
 .ship-content{
     display: flex;
-    width: 100vw;
-    height: 80vh;
-background-color: lightgray;
-justify-content: space-around;
-
+    width: 100%;
+    height: 85vh;
+    background: linear-gradient(to bottom, white, var(--blue-grotto));
+    justify-content: space-around;
 }
 
 .result-container{
     display: flex;
-margin-top: 5vh;
-margin-left: 3vw;
-background-color: rgb(236, 236, 236);
-width: 20vw;
-height: 72vh;
--webkit-box-shadow: -1px 1px 5px 3px rgba(0,0,0,0.24);
--moz-box-shadow: -1px 1px 5px 3px rgba(0,0,0,0.24);
-box-shadow: -1px 1px 5px 3px rgba(0,0,0,0.24);
-border-radius: 1%;
+    margin-top: 5vh;
+    margin-left: 3vw;
+    background-color: white;
+    width: 20vw;
+    height: 72vh;
+    -webkit-box-shadow: -1px 1px 5px rgba(0,0,0,0.24);
+    -moz-box-shadow: -1px 1px 5px rgba(0,0,0,0.24);
+    box-shadow: -1px 1px 5px rgba(0,0,0,0.24);
+    border-radius: 0.5rem;
+}
+
+#search-results-ul {
+    width: 100%;
+    padding: 16px 24px;
+    overflow-y:scroll;
+    scrollbar-width: none;
+}
+#search-results-ul > li {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    list-style-type: none;
+    margin-bottom: 32px;
+    height: 85px;
+    width: 100%;
+    font-size: 16pt;
+    border-radius: 0.5rem;
+    background-color: var(--slate);
+    color: var(--dark-blue);
+    transition: background-color 0.5s ease;
+    -webkit-box-shadow: -1px 1px 5px rgba(0,0,0,0.24);
+    -moz-box-shadow: -1px 1px 5px rgba(0,0,0,0.24);
+    box-shadow: -1px 1px 5px rgba(0,0,0,0.24);
+}
+
+#search-results-ul > li:hover {
+    outline: none;
+    color: white;
+    background-color: var(--dark-blue);
 }
 
 .dashboard-container{
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-    background-color: rgb(236, 236, 236);
+    background: white;
     margin-top: 5vh;
     margin-right: 3vw;
+    padding: 8px 32px;
     width: 70vw;
     height: 72vh;
-    overflow: hidden;
     justify-content: space-around;
-    align-items: center;
-    -webkit-box-shadow: -1px 1px 5px 3px rgba(0,0,0,0.24);
-    -moz-box-shadow: -1px 1px 5px 3px rgba(0,0,0,0.24);
-    box-shadow: -1px 1px 5px 3px rgba(0,0,0,0.24);
-    border-radius: 1%;
+    -webkit-box-shadow: -1px 1px 5px rgba(0,0,0,0.24);
+    -moz-box-shadow: -1px 1px 5px rgba(0,0,0,0.24);
+    box-shadow: -1px 1px 5px rgba(0,0,0,0.24);
+    border-radius: 0.5rem;
+}
+
+.dashboard-container h3 {
+    font-size: 32pt;
+    color: var(--dark-blue)
 }
 
 .vessel-card{
     display: flex;
     justify-content: space-evenly;
-    align-items: center;
     flex-direction: column;
     width: 15vw;
     height: 7vh;
-    border-radius: 4%;
-    background-color: rgb(211, 213, 218);
-    -webkit-box-shadow: -1px 1px 5px 3px rgba(0,0,0,0.28);
-    -moz-box-shadow: -1px 1px 5px 3px rgba(0,0,0,0.28);
-    box-shadow: -1px 1px 5px 3px rgba(0,0,0,0.28);
+    color: white;
+    text-indent: 16px;
+    border-radius: 0.5rem;
+    background-color: var(--slate);
+    -webkit-box-shadow: -1px 1px 5px rgba(0,0,0,0.28);
+    -moz-box-shadow: -1px 1px 5px rgba(0,0,0,0.28);
+    box-shadow: -1px 1px 5px rgba(0,0,0,0.28);
+}
+
+.details-header {
+    font-weight: bold;
+    color: var(--dark-blue)
 }
 
 .map-container{
-    background-color: rgb(189, 198, 208);
-border-radius: 1%;
-    width: 64vw;
+    background-color: var(--slate);
+    border-radius: 0.5rem;
+    width: 100%;
     height: 40vh;
-    -webkit-box-shadow: -1px 1px 5px 3px rgba(0,0,0,0.28);
-    -moz-box-shadow: -1px 1px 5px 3px rgba(0,0,0,0.28);
-    box-shadow: -1px 1px 5px 3px rgba(0,0,0,0.28);
+    -webkit-box-shadow: -1px 1px 5px rgba(0,0,0,0.28);
+    -moz-box-shadow: -1px 1px 5px rgba(0,0,0,0.28);
+    box-shadow: -1px 1px 5px rgba(0,0,0,0.28);
 }
 
 .footer-container{
     display: flex;
     align-items: baseline;
-    background-color: var(--primary-color);
+    background-color: var(--dark-blue);
     width: 100vw;
     height: 10vh;
-    -webkit-box-shadow: 0px -3px 5px 0px rgba(15, 91, 172, 0.69);
-    -moz-box-shadow: 0px -3px 5px 0px rgba(15, 91, 172, 0.69);
-    box-shadow: 0px -3px 5px 0px rgba(15, 91, 172, 0.69);
 }
 
 .written-details{
-    width: 94%;
+    width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
-.details-header{
-    font-weight: bold;
-}
