--- a/src/details.css
+++ b/src/details.css
@@ -176,9 +176,9 @@
 }
 
 #search-results-ul > li:hover {
-    opacity: 0.8;
+    /* opacity: 0.8; */
     outline: none;
-    color: rgb(255, 255, 255);
+    /* color: rgb(255, 255, 255); */
     /* background-color: var(--dark-blue); */
 }
 
