--- a/src/details.css
+++ b/src/details.css
@@ -351,8 +351,9 @@ body {
 
 .filter-options{
     background: none;
-margin-bottom:24px;
+margin-top:16px;
 margin-left: 8px;
+padding: 0px 4px;
 font-size: small;
 
 }
