--- a/src/details.css
+++ b/src/details.css
@@ -1,4 +1,4 @@
-@media(min-width: 640px) {
+@media(min-width: 641px) {
 
     @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
@@ -426,7 +426,7 @@
         align-items: center;
         margin-right: 30%;
     }
-    }
+
 
     #logo-img {
         /* position: relative; */
@@ -488,7 +488,7 @@
     .ship-content {
         display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items: baseline;
         width: 100%;
         height: 80vh;
         background: linear-gradient(to bottom, white, var(--blue-grotto));
@@ -501,7 +501,7 @@
         margin-top: 5vh;
         margin-left: 3vw;
         background-color: white;
-        width: 90vw;
+        width: 95vw;
         height: 12vh;
         -webkit-box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.24);
         -moz-box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.24);
@@ -514,7 +514,7 @@
         gap: 20px;
         width: 100%;
         height: 10vh;
-        padding: 16px 24px;
+        padding: 16px 16px;
         overflow-x: scroll;
         scrollbar-width: none;
     }
@@ -524,7 +524,7 @@
         align-items: center;
         justify-content: center;
         list-style-type: none;
-        height: 85px;
+        height: 90%;
         width: 100%;
         font-size: 16pt;
         border-radius: 0.5rem;
@@ -548,8 +548,9 @@
         display: flex;
         flex-direction: column;
         background: white;
-        margin-top: 5vh;
+        margin-top: 1vh;
         margin-right: 3vw;
+        margin-bottom: 1vh;
         padding: 8px 32px;
         width: 95vw;
         height: 72vh;
@@ -560,6 +561,15 @@
         border-radius: 0.5rem;
     }
 
+    #more-details-btn {
+        width: 15%;
+        display: flex;
+        font-size: 70%;
+        justify-content: center;
+        align-items: center;
+    }
+
+
     .dashboard-container h3 {
         font-size: 32pt;
         color: var(--dark-blue)
@@ -569,10 +579,11 @@
         display: flex;
         justify-content: space-evenly;
         flex-direction: column;
-        width: 15vw;
+        width: 20vw;
         height: 7vh;
         color: white;
-        text-indent: 16px;
+        text-indent: inherit;
+        font-size: 65%;
         border-radius: 0.5rem;
         background-color: var(--slate);
         -webkit-box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.28);
@@ -582,7 +593,9 @@
 
     .details-header {
         font-weight: bold;
-        color: var(--dark-blue)
+        color: var(--dark-blue);
+        font-size: 0.8rem;
+
     }
 
     #map-container {
