--- a/src/details.css
+++ b/src/details.css
@@ -522,6 +522,10 @@
         width: 100%;
         font-size: 16pt;
         border-radius: 0.5rem;
+        padding-left: 3%;
+        padding-right: 3%;
+        text-overflow: ellipsis;
+        white-space: nowrap;
         background-color: var(--slate);
         color: var(--dark-blue);
         transition: background-image 0.5s ease;
