--- a/src/details.css
+++ b/src/details.css
@@ -93,18 +93,6 @@ body {
         flex: 0.1;
     }
 
-
-
-    .profile-icon {
-        position: absolute;
-        width: 32px;
-        height: 32px;
-        border-radius: 50%;
-        border-color: #000;
-        cursor: pointer;
-    }
-
-
     /* Main Section */
 
     .ship-content {
@@ -361,7 +349,7 @@ body {
 
     #filter-by-id {
         list-style-type: none;
-        padding: 0;
+        padding: 0px 0px;
 
     }
 
