--- a/src/details.css
+++ b/src/details.css
@@ -412,7 +412,6 @@ body {
     .ship-content {
         flex-direction: column;
         align-items: baseline;
-        overflow: scroll;
         padding-bottom: 8px;
     }
 
@@ -447,6 +446,8 @@ body {
         margin-right: 3vw;
         margin-bottom: 1vh;
         width: 95vw;
+        overflow-y: scroll;
+
     }
 
     #more-details-btn {
