--- a/src/contact.css
+++ b/src/contact.css
@@ -15,6 +15,8 @@
     --background-color: hsl(169, 55%, 86%);
     --navsearch-color: hsl(210, 20%, 14%);
     --shadow-color: hsl(32, 100%, 50%);
+    --white: #ffffff;
+    --black: #000000;
 
 }
 
@@ -42,7 +44,7 @@ body {
     flex-direction: column;
     gap: 10px;
     max-width: 350px;
-    background-color: #fff;
+    background-color: var(--white);
     padding: 20px;
     border-radius: 20px;
     position: relative;
@@ -176,7 +178,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #fff;
+    background-color: var(--white);
     padding: 8px 64px;
     gap: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -260,7 +262,7 @@ body {
 
 .popup-button {
     background-color: #4A90E2;
-    color: white;
+    color: var(--white);
     width: 120px;
     height: 40px;
     border: none;
@@ -274,7 +276,7 @@ body {
 .footer-container {
     display: flex;
     flex-direction: column;
-    color: white;
+    color: var(--white);
     background-color: var(--dark-blue);
     padding: 12px 0px;
     -webkit-box-shadow: 0px -3px 5px 0px rgba(15, 91, 172, 0.69);
